Added Flex boxes as the main screen of the app

--- a/share-it-clone/src/App.css
+++ b/share-it-clone/src/App.css
@@ -11,3 +11,12 @@
   position: absolute;
   top: 0;
 }
+
+#Main{
+  display: flex;
+  background-color: #efbbcf;
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  gap: 0;
+}
